<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@android:color/white"
    android:padding="24dp"
    android:id="@+id/main">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/gym_logo"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:importantForAutofill="no"
        android:text="@string/registration"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="24dp"
        android:gravity="center" />

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:background="@drawable/edittext_background"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:layout_marginBottom="12dp"
        tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        android:layout_marginBottom="12dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        android:layout_marginBottom="20dp"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:backgroundTint="@color/blue"
        android:textColor="@android:color/white"
        android:layout_marginBottom="12dp"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/already_have_an_account"
        android:textColor="#757575" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:layout_marginTop="4dp"
        android:gravity="center" />

</LinearLayout>
